--- a/app/src/main/res/layout/activity_book_ride.xml
+++ b/app/src/main/res/layout/activity_book_ride.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#100F0F">
 
     <!-- Google Map -->
     <com.google.android.gms.maps.MapView
@@ -16,9 +17,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Confirm Pickup and Drop-off"
+        android:textAllCaps="false"
+        android:background="@drawable/button_black"
+        android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/black" />
+        android:layout_margin="24dp"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="12dp"/>
 </RelativeLayout>
