--- a/frontend/myridehub/src/Booking/BookingPage.css
+++ b/frontend/myridehub/src/Booking/BookingPage.css
@@ -193,3 +193,45 @@
   width: 100%;
   text-align: center;
 }
+
+/* Stepper Progress Bar */
+.booking-stepper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+  padding: 0 20px;
+}
+
+.booking-stepper .step {
+  flex: 1;
+  text-align: center;
+  position: relative;
+  font-size: 14px;
+  font-weight: bold;
+  color: #777;
+  padding-bottom: 8px;
+}
+
+.booking-stepper .step::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -50%;
+  width: 100%;
+  height: 3px;
+  background-color: #555;
+  z-index: -1;
+}
+
+.booking-stepper .step:last-child::after {
+  display: none;
+}
+
+.booking-stepper .step.active {
+  color: #ff6666;
+}
+
+.booking-stepper .step.active::after {
+  background-color: #ff6666;
+}
