--- a/frontend/myridehub/src/Dashboard/DashboardPage.css
+++ b/frontend/myridehub/src/Dashboard/DashboardPage.css
@@ -11,7 +11,7 @@ html, body {
   font-family: 'Arial', sans-serif;
   background-color: #fff;
   color: #111;
-  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .dashboard-page {
@@ -274,7 +274,7 @@ html, body {
   color: white;
   text-decoration: none;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 16px;  
   transition: opacity 0.3s;
 }
 
